Fix image width when grid column be too small #11

--- a/src/package/plugins/slate-image-plugin/ImageNode.css
+++ b/src/package/plugins/slate-image-plugin/ImageNode.css
@@ -1,3 +1,7 @@
+.image-node {
+  max-width: 100%;
+}
+
 .image-node.active {
   border: 1px solid black;
   margin: -1px;
